# ecommerce_hw

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  14.2_main.py  17.1_main.py  README.md  pyproject.toml
src/: __init__.py  main.py
tests/: test_classes.py
