[project]
name = "ecommerce-hw"
version = "0.1.0"
description = ""
authors = [
    {name = "Damir",email = "leheln16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
autoflake = "^2.3.1"
pre-commit = "^4.2.0"
autopep8 = "^2.3.2"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.flake8]
max-line-length = 88
ignore = "E501,W503"
